change print invoice and preinvoice view page

--- a/New_version/test.html
+++ b/New_version/test.html
@@ -12000,13 +12000,13 @@ body.dark .ui-datepicker select {
 
 <!-- begin::main content -->
 <main class="main-content">
-    <div class="card">
+            <div class="card">
         <div class="card-body" id="printable_sec">
             <div class="card-title">
                 <div class="row">
                     <div class="col-4">
-                        <img src="/assets/media/image/header-logo.png" style="width: 15rem;">
-                    </div>
+                                                    <img src="/assets/media/image/header-logo.png" style="width: 15rem;">
+                                            </div>
                     <div class="col-3 text-right">
                         <h3>سفارش مشتری</h3>
                     </div>
@@ -12031,7 +12031,7 @@ body.dark .ui-datepicker select {
                                                     <tr>
                                 <td class="text-center">
                                     <div class="mb-3">
-                                        <span class="mr-100">نام شخص حقیقی/حقوقی: {{seller_details[1]}}</span>
+                                        <span class="mr-100">نام شخص حقیقی/حقوقی: شرکت صنایع ماشین های اداری ماندگار پارس</span>
                                         <span class="mr-100">شماره اقتصادی: 14011383061</span>
                                         <span class="mr-100">شماره ثبت/شماره ملی: 9931</span>
                                         <span class="mr-100">شناسه ملی: 14011383061</span>
@@ -12055,16 +12055,16 @@ body.dark .ui-datepicker select {
                             <tr>
                                 <td class="text-center">
                                     <div class="mb-3">
-                                        <span class="mr-100">نام شخص حقیقی/حقوقی: {{customer_data[0][1]}}</span>
-                                        <span class="mr-100">شماره اقتصادی: {{customer_data[0][2]}}</span>
-                                        <span class="mr-100">شماره ثبت/شماره ملی: {{customer_data[0][2]}}</span>
-                                        <!--<span class="mr-100">استان: گیلان</span>-->
+                                        <span class="mr-100">نام شخص حقیقی/حقوقی: کشتیرانی دریای خزر</span>
+                                        <span class="mr-100">شماره اقتصادی: 411185441473</span>
+                                        <span class="mr-100">شماره ثبت/شماره ملی: 10860272853</span>
+                                        <span class="mr-100">استان: گیلان</span>
                                     </div>
                                     <div>
-                                        <!--<span class="mr-100">شهر: گیلان</span>-->
-                                        <span class="mr-100">کد پستی: {{customer_data[0][5]}}</span>
-                                        <span class="mr-100">نشانی: {{customer_data[0][4]}}</span>
-                                        <span class="mr-100">شماره تلفن: {{customer_data[0][2]}}</span>
+                                        <span class="mr-100">شهر: گیلان</span>
+                                        <span class="mr-100">کد پستی: 4315695385</span>
+                                        <span class="mr-100">نشانی: گیلان</span>
+                                        <span class="mr-100">شماره تلفن: 09116190114</span>
                                     </div>
                                 </td>
                             </tr>
