update all db connection to db server for parso tejart erp system

--- a/New_version/test.html
+++ b/New_version/test.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-
+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
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
